# agentic-rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
data/documents/: agentic_rag_patterns.md  evaluation_ragas.md  rag_fundamentals.md
data/tables/: product_reviews.csv
evaluation/: dataset.json  run_evaluation.py
scripts/: create_sample_db.py
src/agentic_rag/: __init__.py  cli.py  config.py  ingestion.py  tabular.py
src/agentic_rag/graph/: build.py  chains.py  nodes.py  state.py
src/agentic_rag/tools/: sql.py  web_search.py
tests/: test_decisions.py  test_graph.py  test_sql_guard.py  test_sql_retry.py  test_tabular.py  test_verdict_parser.py
