[project]
name = "agentic-rag"
version = "0.1.0"
description = "Multi-source agentic RAG built with LangGraph: adaptive routing, retrieval grading, self-correction and RAGAS evaluation. 100% open source, runs on CPU."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andrea" }]
keywords = ["rag", "langgraph", "langchain", "agents", "ollama", "ragas"]

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # <0.4: ragas imports langchain_community.chat_models.vertexai, removed in 0.4
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3",
    "langchain-ollama>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "sentence-transformers>=3.0",
    "ddgs>=9.0",
    "pypdf>=5.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ui = ["streamlit>=1.38"]
eval = ["ragas>=0.4", "datasets>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
agentic-rag = "agentic_rag.cli:main"
agentic-rag-ingest = "agentic_rag.ingestion:main"
agentic-rag-ingest-csv = "agentic_rag.tabular:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
